✨ Performed Some Work on Image Command